<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginTop="96dp"
        android:foregroundTint="#000000"
        android:text="@string/InSesionMain"
        android:textAlignment="center"
        android:textColor="#F0F0FF"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="243dp"
        android:layout_height="62dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#9146FF"
        android:ems="10"
        android:hint="@string/EdtTContrasenaMain"
        android:inputType="textPassword"
        android:textColorHint="#F0F0FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextName" />

    <EditText
        android:id="@+id/EditTextName"
        android:layout_width="243dp"
        android:layout_height="62dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#9146FF"
        android:ems="10"
        android:hint="@string/TxtNombreMain"
        android:inputType="text"
        android:textColor="#F0F0FF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#F0F0FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/BtnIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#9146FF"
        android:text="@string/txtiniciarmain"
        android:textColor="#F0F0FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>